# ipa_rescale_img

./: CMakeLists.txt  README.md  package.xml
include/: ipa_rescale_img_node.h
launch/: ipa_recale_img.launch
src/: ipa_rescale_img_node.cpp
