<?xml version="1.0"?>
<package format="2">
  <name>ipa_rescale_img</name>
  <version>0.0.0</version>
  <description>The ipa_rescale_img package pkg</description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>image_transport</depend>
 
 
</package>
